--- a/input/resources/measure-HIVSimpleGender.json
+++ b/input/resources/measure-HIVSimpleGender.json
@@ -43,43 +43,61 @@
          }
       ]
    },
+   "type":[
+      {
+         "coding":[
+            {
+               "code":"process"
+            }
+         ]
+      }
+   ],
    "group":[
       {
          "code":{
-            "coding":[
-               {
-                  "system":"http://terminology.hl7.org/CodeSystem/measure-population",
-                  "code":"numerator"
-               }
-            ]
+            "text":"cohort"
          },
-         "description":"HIVSimpleGender",
+         "description":"HIVSimpleGender Cohort",
          "population":[
             {
+               "description":"HIVSimpleGender Initial Population",
                "code":{
-                  "text":"cohort"
+                  "coding":[
+                     {
+                        "system":"http://terminology.hl7.org/CodeSystem/measure-population",
+                        "code":"initial-population"
+                     }
+                  ]
                },
                "criteria":{
-                  "language":"text/cql-identifier",
+                  "language":"text/cql",
+                  "expression":"Initial Population"
+               }
+            },
+            {
+               "description":"HIVSimpleGender Numerator",
+               "code":{
+                  "coding":[
+                     {
+                        "system":"http://terminology.hl7.org/CodeSystem/measure-population",
+                        "code":"numerator"
+                     }
+                  ]
+               },
+               "criteria":{
+                  "language":"text/cql",
                   "expression":"Numerator"
                }
-            }
-         ]
-      },
-      {
-         "code":{
-            "coding":[
-               {
-                  "system":"http://terminology.hl7.org/CodeSystem/measure-population",
-                  "code":"denominator"
-               }
-            ]
-         },
-         "description":"HIVSimpleGender",
-         "population":[
+            },
             {
+               "description":"HIVSimpleGender Denominator",
                "code":{
-                  "text":"cohort"
+                  "coding":[
+                     {
+                        "system":"http://terminology.hl7.org/CodeSystem/measure-population",
+                        "code":"denominator"
+                     }
+                  ]
                },
                "criteria":{
                   "language":"text/cql",
